@@ -45,6 +45,7 @@ public class TestAppController {
   private AppControllerForTest appController;
   private RequestContext ctx;
   private Job job;
+  private static final String taskId = "task_01_01_m_01";
 
   @Before
   public void setUp() throws IOException {
@@ -70,7 +71,7 @@ public class TestAppController {
 
     appController = new AppControllerForTest(app, configuration, ctx);
     appController.getProperty().put(AMParams.JOB_ID, "job_01_01");
-    appController.getProperty().put(AMParams.TASK_ID, "task_01_01_m01_01");
+    appController.getProperty().put(AMParams.TASK_ID, taskId);
 
   }
 
@@ -205,7 +206,7 @@ public class TestAppController {
         "Access denied: User user does not have permission to view job job_01_01missing task ID",
         appController.getData());
 
-    appController.getProperty().put(AMParams.TASK_ID, "task_01_01_m01_01");
+    appController.getProperty().put(AMParams.TASK_ID, taskId);
     appController.taskCounters();
     assertEquals(CountersPage.class, appController.getClazz());
   }
@@ -247,7 +248,7 @@ public class TestAppController {
   public void testTask() {
  
     appController.task();
-    assertEquals("Attempts for task_01_01_m01_01" ,
+    assertEquals("Attempts for " + taskId ,
         appController.getProperty().get("title"));
 
     assertEquals(TaskPage.class, appController.getClazz());
@@ -290,7 +291,7 @@ public class TestAppController {
         "Access denied: User user does not have permission to view job job_01_01",
         appController.getData());
 
-    appController.getProperty().put(AMParams.TASK_ID, "task_01_01_m01_01");
+    appController.getProperty().put(AMParams.TASK_ID, taskId);
     appController.attempts();
     assertEquals("Bad request: missing task-type.", appController.getProperty()
         .get("title"));
